# huddle

./: CHANGELOG.md  LICENSE  Makefile  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: packaging.md
src/hudctl/: __init__.py  __main__.py  cache.py  config.py  daemon.py  engine.py  events.py  formatter.py  scheduler.py  state.py  theme.py
src/hudctl/cli/: __init__.py  doctor.py  install.py  main.py  ops.py
src/hudctl/collectors/: __init__.py  base.py  battery.py  clock.py  cpu.py  cwd.py  docker.py  git.py  hostname.py  kubernetes.py  memory.py  network.py  ssh.py  vpn.py
src/hudctl/renderers/: __init__.py  base.py  bash.py  json.py  kitty.py
src/hudctl/systemd/: huddle.service
src/hudctl/themes/: developer.toml  minimal.toml
tests/integration/: test_daemon_lifecycle.py
tests/unit/: test_cache.py  test_collector_battery_vpn.py  test_collector_clock.py  test_collector_cpu.py  test_collector_cwd.py  test_collector_docker_k8s.py  test_collector_git.py  test_collector_hostname_ssh.py  test_collector_memory.py  test_collector_network.py  test_config.py  test_daemon.py  test_doctor.py  test_engine.py  test_events.py  test_formatter.py  test_install.py  test_ops.py  test_renderers.py  test_scheduler.py  test_state.py  test_version.py
